[package]
name = "rond"
version = "0.5.1"
license = "MIT/Apache-2.0"
keywords = ["parser", "serde", "serialization"]
authors = [
	"Dzmitry Malyshau <kvarkus@gmail.com>",
	"Thomas Schaller <torkleyy@gmail.com>",
]
edition = "2018"
description = "Rusty Object Notation in Debug format"
categories = ["encoding"]
readme = "README.md"
homepage = "https://github.com/vlisivka/rond"
repository = "https://github.com/vlisivka/rond"
exclude = ["bors.toml", ".travis.yml"]

[lib]
name = "rond"

[dependencies]
base64 = "0.10"
bitflags = "1"
indexmap = { version = "1.0.2", features = ["serde-1"], optional = true }
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
serde_bytes = "0.11"
serde_json = "1"
